add_executable(exception_test Exception_test.cpp)
target_link_libraries(exception_test muduo_base)
add_executable(atomic_unittest Atomic_unittest.cpp)
target_link_libraries(atomic_unittest muduo_base)
add_executable(thread_test Thread_test.cpp)
target_link_libraries(thread_test muduo_base pthread)
add_executable(mutex_test Mutex_test.cpp)
target_link_libraries(mutex_test muduo_base pthread)

